Changes in version 2.01.08 (2023-03)
- Update type: Minor.
- Updated importRdata() to use more stringent filtering (inspired by edgeR::filterByExpr()) before running SVA. Output in final switchAnalyzeRlist is not affected (aka that have not been filtered).

Changes in version 2.01.07 (2023-02)
- Update type: Minor.
- Fixed an edgecase bug in importRdata()

Changes in version 2.01.06 (2023-02)
- Update type: Minor.
- Fixed an bug in isoformSwitchAnalysisPart2() that could result in problem when running without toplogy analysis.
- Introduced a better error message in analyzeORF().

Changes in version 2.01.05 (2023-02)
- Update type: Minor.
- Updated switchPlotTranscript() to make a message instaed of an error when plotTopology=TRUE but isoform topology had not beed added.
- More detailed descriptions of analyzeDeepTMHMM() and analyzeDeepLoc2() added to the vignette.

Changes in version 2.01.04 (2023-02)
- Update type: Minor.
- Fix to handle duplicated levels

Changes in version 2.01.03 (2023-02)
- Update type: Minor.
- Fixes to accomodate dplyr updates

Changes in version 2.01.02 (2023-02)
- Update type: Minor.
- Fixed a problem with batch correction in importRdata()

Changes in version 2.01.01 (2023-02)
- Update type: Major.
- createSwitchAnalyzeRlist() was removed. All users should instead use importRdata().
- importRdata() now automatically detects un-annoated covariates in data via the sva package.
- importRdata() now automatically corrects abundance and isoform fractions for unwanted covariates (both used supplied and those found via sva).
- Accordingly all batch correction functionallity in the isoformSwitchTestDEXSeq() function was removed.
- isoformSwitchTestSatuRn() was introduced. This test uses satuRn for switch identification which works extremely well for larger sample sizes. Huge thanks to Jeroen Gilis making this functionality and the pull request!