@@ -1,6 +1,7 @@
 Changes in version 2.01.08 (2023-03)
 - Update type: Minor.
 - Updated importRdata() to use more stringent filtering (inspired by edgeR::filterByExpr()) before running SVA. Output in final switchAnalyzeRlist is not affected (aka that have not been filtered).
+- importRdata() to also handle when to many SVAs are found.
 
 Changes in version 2.01.07 (2023-02)
 - Update type: Minor.
